Added yarn and typescript.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       />
       <span>[s]</span>
     </div>
-    <div class="container" id="container"></div>
+    <div id="container" class="container"></div>
     <script src="./config.js"></script>
   </body>
 </html>
