Added link hotkey spaghetti code. Sorry future me.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <span>[s]</span>
     </div>
     <div id="container" class="container"></div>
-    <script src="./config.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
